VSE: prefetch frames crashes with some scene strips #125401
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#125401
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22
Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash:
a51f293548ad
Worked: (newest version of Blender that worked as expected)
Short description of error
Ticking prefetch frames crashes.
Exact steps for others to reproduce the error
Not sure how to reproduce but here is a file where it happens:
https://www.dropbox.com/t/JMQNeI9dkPUuKfjM
systematic crash on "prefetch frames" in VSEto VSE: prefetch frames crashes with some scene stripsAt least in 4.3 / current main, the crash happens when the prefetch thread renders a scene strip, and inside of it DEG is evaluated, and view layer is copied:
In the code, it seems like the
lc_scene_dst
is null:Blender 3.6, 4.0 and 4.1 all seem to crash on this file as well, so it does not look like a regression.
Prefer if crashes are always High priority
@loicbramoulle Can you upload the file to this site? Upload is expired and I don't have dropbox account, neither want one.
@iss sure, I'll try right now to reduce the file size while making sure the crash still happens in a nearly empty file. (that I can paste here)
But in the meantime if you want, you can download transfers without a dropbox account, at the bottom of the download popup:
(but yes sorry the file stay online only a week I think.)
https://www.dropbox.com/t/dpjrao5HnLvpRHlS
@iss ah nice 84MB fits, and the crash still happens. (just go in the Video sequencer workstpace, and click prefetch on the n-panel of the video preview.)
testing in 4.2.1 prefetch frames doesn't crash instantly anymore, but it does systematically crash after maybe 1 minute, scrolling a few times over a scene strip.
@loicbramoulle hi, best to open a new report with necessary info.
@PratikPB2123 I can try but I would just copy paste, I don't have any other info I think, Prefetch just crash, just not instantly like before.