Fix #125401: Crash when enabling prefetching

Prefetching thread attempted to render scene strip inside of meta strip,
because `channels` argument was incorrectly set to top-level channels.

Pull Request: https://projects.blender.org/blender/blender/pulls/126092